--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".activity_detail_neighbour"
-            android:exported="false">
+            android:name=".ui.neighbour_list.activity_detail_neighbour"
+            android:exported="false"
+            android:parentActivityName=".ui.neighbour_list.ListNeighbourActivity">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
