--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,18 +13,18 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".ui.neighbour_list.activity_detail_neighbour"
+            android:name=".Controllers.Activities.activity_detail_neighbour"
             android:exported="false"
-            android:parentActivityName=".ui.neighbour_list.ListNeighbourActivity">
+            android:parentActivityName=".Controllers.Activities.ListNeighbourActivity">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".ui.neighbour_list.AddNeighbourActivity"
+            android:name=".Controllers.Activities.AddNeighbourActivity"
             android:label="@string/activity_new_neighbour" />
         <activity
-            android:name=".ui.neighbour_list.ListNeighbourActivity"
+            android:name=".Controllers.Activities.ListNeighbourActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
