Modification du test instrumentalisé

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,8 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".Controllers.Activities.activity_detail_neighbour"
-            android:exported="false"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:parentActivityName=".Controllers.Activities.ListNeighbourActivity">
+            android:parentActivityName=".Controllers.Activities.ListNeighbourActivity"
+            android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
